experiment_output/error_log/nondex-cuzfrog-gradle-lean.log
/mnt/batch/tasks/workitems/NONDEX_nondex_r131_1M31d16h48m2s/job-1/Task1243/wd/NonDex-plugin-test/github.com/cuzfrog/gradle-lean/src/main/java/com/github/cuzfrog/gradle/lean/FsUtils.java:3: error: package com.sun.nio.zipfs does not exist
import com.sun.nio.zipfs.ZipFileSystem;
                        ^
/mnt/batch/tasks/workitems/NONDEX_nondex_r131_1M31d16h48m2s/job-1/Task1243/wd/NonDex-plugin-test/github.com/cuzfrog/gradle-lean/src/main/java/com/github/cuzfrog/gradle/lean/FsUtils.java:36: error: cannot find symbol
            if (archivePath.getFileSystem() instanceof ZipFileSystem) {
                                                       ^
  symbol:   class ZipFileSystem
  location: class FsUtils
2 errors

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':compileJava'.
> Compilation failed; see the compiler error output for details.

* Try:
Run with --stacktrace option to get the stack trace. Run with --info or --debug option to get more log output. Run with --scan to get full insights.

* Get more help at https://help.gradle.org

BUILD FAILED in 17s
